--- a/data/theme/bootstrap/forum_nav.html
+++ b/data/theme/bootstrap/forum_nav.html
@@ -1,12 +1,20 @@
 <div class="page-header">
+    <form method="get" action="">
+        <input type="hidden" value="index" name="c" />
+        <input type="hidden" value="search" name="a" />
+        <input type="hidden" value="6" name="catid" />
+        <div class="form-group">
+            <input type="text" class="form-control" value="" name="kw" placeholder="搜索。。。" />
+        </div>
+    </form>
     <div class="row">
         <div class="col-md-6 col-sm-6 col-xs-6">
 {if $member}
             <a class="btn btn-success" href="{function.url('member/index')}">个人中心</a>
             <a class="btn btn-default" href="{function.url('member/login/out')}">退出</a>
 {else}
-            <a class="btn btn-default" href="{function.url('member/login')}">会员登录</a>
-            <a class="btn btn-default" href="{function.url('member/register')}">免费注册</a>
+            <a class="btn btn-default" href="{function.url('member/login')}">登录</a>
+            <a class="btn btn-default" href="{function.url('member/register')}">注册</a>
 {/if}
         </div>
         <div class="col-md-6 col-sm-6 col-xs-6 text-right">
