--- a/data/theme/bootstrap/footer.html
+++ b/data/theme/bootstrap/footer.html
@@ -2,13 +2,14 @@
     <div class="footer">
         <div class="container">
             <div class="text-muted pull-left">
-                <p>Powered by <a href="https://inpanel.org/">InPanel</a> & <a href="https://crogram.com" target="_blank">Crogram</a>
-                    <span>&copy; CopyRight 2019 All Rights Reserved.</span>
-                    <span>{$app_execution_time}</span>
+                <p>
+                    <span>&copy;&nbsp;CopyRight {function.date('Y')}&nbsp;{function.ucfirst(APP_NAME)} All Rights Reserved.</span>
+                    <span>Powered by <a href="https://crogram.com" target="_blank">Crogram</a>.</span>
+                    <span>={$app_execution_time}=</span>
                 </p>
             </div>
             <div class="text-muted pull-right">
-                <a href="https://inpanel.org/bbs" target="_blank"><span class="glyphicon glyphicon-comment"></span> 社区</a>
+                <a href="http://www.beian.miit.gov.cn" target="_blank">豫ICP备14006598号</a>
             </div>
         </div>
     </div>
