--- a/src/data/theme/bootstrap/footer.html
+++ b/src/data/theme/bootstrap/footer.html
@@ -16,5 +16,7 @@
 </div>
 <script src="static/js/jquery.min.js"></script>
 <script src="static/bootstrap/js/bootstrap.min.js"></script>
+{function.doHookAction('view_footer')}
+
 </body>
 </html>
