--- a/src/data/theme/bootstrap/header.html
+++ b/src/data/theme/bootstrap/header.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="/static/bootstrap/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="/theme/css/style.css" type="text/css"/>
     <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" mce_href="/favicon.ico">
+    {function.doHookAction('view_head')}
 </head>
 
 <body>
