--- a/src/data/theme/bootstrap/member/content_add.html
+++ b/src/data/theme/bootstrap/member/content_add.html
@@ -1,10 +1,8 @@
-{template header.html}
+{template member/header.html}
 
 <script type="text/javascript" src="/static/js/jquery.min.js"></script>
 <script type="text/javascript" src="/static/js/dialog.js?skin=green"></script>
 <script type="text/javascript" src="/static/js/admin.js"></script>
-
-{template member/member_nav.html}
 
 <div class="row">
     <div class="col-sm-3 col-md-3 col-xs-4">
