--- a/src/data/theme/bootstrap/member/form_show.html
+++ b/src/data/theme/bootstrap/member/form_show.html
@@ -1,4 +1,4 @@
-{template header.html}
+{template member/header.html}
 <div class="main">
     <div class="w210 fl">
         {template member/sidebar.html}
