--- a/src/data/theme/bootstrap/member/index.html
+++ b/src/data/theme/bootstrap/member/index.html
@@ -1,6 +1,4 @@
-{template header.html}
-{template member/member_nav.html}
-
+{template member/header.html}
 
 {if !$member['status']}
     <div class="alert alert-warning" role="alert"><h3>您的账号暂时未通过审核！</h3></div>
