--- a/src/data/theme/bootstrap/member/password.html
+++ b/src/data/theme/bootstrap/member/password.html
@@ -1,11 +1,10 @@
-{template header.html}
-{template member/member_nav.html}
+{template member/header.html}
 
 <div class="row">
-    <div class="col-sm-3 col-md-3 col-xs-4">
+    <div class="col-sm-3 col-md-2 col-xs-4">
         {template member/sidebar.html}
     </div>
-    <div class="col-sm-9 col-md-9 col-xs-8">
+    <div class="col-sm-9 col-md-10 col-xs-8">
         <form class="form" action="" method="post">
             <table class="table table-bordered">
                 <tbody>
