--- a/src/data/theme/bootstrap/member/content_list.html
+++ b/src/data/theme/bootstrap/member/content_list.html
@@ -1,5 +1,4 @@
-{template header.html}
-{template member/member_nav.html}
+{template member/header.html}
 
 <div class="row">
     <div class="col-sm-3 col-md-3 col-xs-3">
