--- a/src/data/theme/bootstrap/member/header.html
+++ b/src/data/theme/bootstrap/member/header.html
@@ -27,7 +27,7 @@
                     <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar">
                         <span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="{$site_url}">{$site_name}</a>
+                    <a class="navbar-brand" href="{function.url('member/index')}">个人中心</a>
                 </div>
                 <div id="navbar" class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
