--- a/src/data/theme/bootstrap/member/login.html
+++ b/src/data/theme/bootstrap/member/login.html
@@ -1,4 +1,4 @@
-{template header.html}
+{template member/header.html}
 <script type="text/javascript">
     function reload_code() {
         document.getElementById('code').src = '{function.url("api/access/checkcode", array("width"=>80, "height"=>28))}&' + Math.random();
@@ -33,14 +33,12 @@
     }
 </script>
 
-{template member/member_nav.html}
-
 <form class="form form-horizontal" method="post" action="">
     <input type="hidden" value="{$backurl}" name="data[back]" />
     <div class="form-group form-inline">
         <label class="col-sm-2 control-label" for="inputUsername"><font color="red">*</font>登录会员：</label>
         <div class="col-sm-10">
-            <input class="form-control" type="text" name="data[username]" id="inputUsername" placeholder="登陆账号" autofocus onblur="usernameBlur()" />
+            <input class="form-control" type="text" name="data[username]" id="inputUsername" placeholder="登陆账号" onblur="usernameBlur()" />
             <span id="username_prompt" class="tips_info"></span>
         </div>
     </div>
