--- a/src/data/theme/bootstrap/member/sidebar.html
+++ b/src/data/theme/bootstrap/member/sidebar.html
@@ -1,10 +1,9 @@
-<div class=" nav-sidebar">
+<div class="panel panel-default">
+    <div class="panel-heading"><span class="panel-title">导航</span></div>
     <div class="list-group">
         <a class="list-group-item" href="{function.url('member/index/edit')}">会员资料</a>
         <a class="list-group-item" href="{function.url('member/index/password')}">修改密码</a>
         <a class="list-group-item" href="{function.url('member/content/')}">内容管理</a>
-{loop $contents $n=>$t}
-        <a class="list-group-item{if $n && $form['tablename']==$n} class=\"active\"{/if}" href="{$t['url']}">{$t['name']}</a>
-{/loop}
+        {loop $contents $n=>$t}<a class="list-group-item{if $n && $form['tablename']==$n} class=\"active\"{/if}" href="{$t['url']}">{$t['name']}</a>{/loop}
     </div>
 </div>
