主题文件夹放到根目录

--- a/src/theme/mobile/head.html
+++ b/src/theme/mobile/head.html
@@ -12,7 +12,7 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <meta name="format-detection" content="telephone=no">
-  <link href="/theme/css/style.css" rel="stylesheet" type="text/css">
+  <link href="/theme/mobile/css/style.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
