--- a/src/theme/mobile/page.html
+++ b/src/theme/mobile/page.html
@@ -2,7 +2,7 @@
 {template header.html}
 <div class="title">
  <h1 class="titname">联系我们</h1>
-  <a href="javascript:history.back()"><span class="titback"><img src="{$site_template}images/backicon.gif" /></span></a>
+  <a href="javascript:history.back()"><span class="titback"><img src="{$site_template}images/icon_user.png" /></span></a>
 </div>
 <div class="main clearfix">
 {$content}
