--- a/src/theme/mobile/show_news.html
+++ b/src/theme/mobile/show_news.html
@@ -1,6 +1,6 @@
 {template head.html}
 {template header.html}
-<div class="contit"><a href="javascript:history.back()"><span class="backicon">&lt;</span><span>返回</span></a></div>
+<div class="contit"><a href="javascript:history.back()"><span class="icon_user">&lt;</span><span>返回</span></a></div>
 <!--con-->
 <div class="main clearfix">
  <h1 class="maintit">{$title}</h1>
