--- a/src/theme/mobile/category_news.html
+++ b/src/theme/mobile/category_news.html
@@ -28,7 +28,7 @@ $(document).ready(function(){
 <header>
 <div class="title">
   <h1 class="titname">{function.position($catid, ' &gt;&gt;&nbsp;&nbsp;')}</h1>
-  <a href="javascript:history.back()"><span class="titback"><img src="{$site_template}images/backicon.gif" /></span></a>
+  <a href="javascript:history.back()"><span class="titback"><img src="{$site_template}images/icon_user.png" /></span></a>
 </div>
 
 
