--- a/src/theme/mobile/list_news.html
+++ b/src/theme/mobile/list_news.html
@@ -15,7 +15,7 @@ $(document).ready(function(){
 </script>
 <div class="title">
   <h1 class="titname">{function.position($catid, ' &gt;&gt;&nbsp;&nbsp;')}</h1>
-  <a href="javascript:history.back()"><span class="titback"><img src="{$site_template}images/backicon.gif" /></span></a>
+  <a href="javascript:history.back()"><span class="titback"><img src="{$site_template}images/icon_user.png" /></span></a>
 </div>
 <div class="newlist">
  <ul class="tabs" style="margin-top: 0">
