--- a/src/theme/mobile/search.html
+++ b/src/theme/mobile/search.html
@@ -1,7 +1,7 @@
 {template head.html}
 {template header.html}
 <div class="title">
- <a href="/"><span class="titback"><img src="{$site_template}images/backicon.gif" /></span></a>
+ <a href="/"><span class="titback"><img src="{$site_template}images/icon_user.png" /></span></a>
  <h1 class="titname">搜索结果</h1>
 </div>
 <div class="newlist">
