--- a/src/theme/mobile/list_article.html
+++ b/src/theme/mobile/list_article.html
@@ -5,7 +5,7 @@
 <div class="list-article">
     <div class="list-title">
         <a href="{$site_url}">首页</a>
-        &nbsp;>>&nbsp; {function.position($catid, ' &gt;&gt;&nbsp;&nbsp;')}
+        &nbsp;>>&nbsp; {function.breadcrumb($catid, ' &gt;&gt;&nbsp;&nbsp;')}
 
     </div>
     <div class="list-content">
