--- a/src/theme/mobile/show_product.html
+++ b/src/theme/mobile/show_product.html
@@ -7,7 +7,7 @@
  <div class="w740 fr">
   <div class="page bg">
    <div class="newstitle">
-    您当前位置：<a href="{$site_url}">首页</a> >> {function.position($catid, ' &gt;&gt;&nbsp;&nbsp;')}
+    您当前位置：<a href="{$site_url}">首页</a> >> {function.breadcrumb($catid, ' &gt;&gt;&nbsp;&nbsp;')}
    </div>
    <div class="blank10 clear"></div>
    <h2>{$title}</h2>
