--- a/src/theme/bootstrap/crumbs.html
+++ b/src/theme/bootstrap/crumbs.html
@@ -1,7 +1,7 @@
 <div class="page-header">
     <a class="btn btn-link" href="{$site_url}">首页</a>&nbsp;&gt;&nbsp;
 {if $catid}
-{function.position($catid, '&gt;&nbsp;&nbsp;')}
+{function.breadcrumb($catid, '&gt;&nbsp;&nbsp;')}
 {else}
 {$page_position}
 {/if}
