--- a/src/theme/mobile/list_product.html
+++ b/src/theme/mobile/list_product.html
@@ -6,7 +6,7 @@
  </div>
   <div class="w740 fr">
   <div class="page bg">
-   <div class="newstitle">您当前位置：<a  href="{$site_url}">首页</a> >> {function.position($catid, ' &gt;&gt;&nbsp;&nbsp;')}</div>
+   <div class="newstitle">您当前位置：<a  href="{$site_url}">首页</a> >> {function.breadcrumb($catid, ' &gt;&gt;&nbsp;&nbsp;')}</div>
    <div class="blank10 clear"></div>
 <!--列表开始-->
    <div class="piclist">
