--- a/src/theme/bootstrap/category_product.html
+++ b/src/theme/bootstrap/category_product.html
@@ -5,7 +5,7 @@
  </div>
  <div class="w740 fr">
   <div class="page bg">
-    {template crumbs.html}
+    {template breadcrumb.html}
    <div class="blank10 clear"></div>
 {nav  parentid=$catid typeid=1}
    <div class="newslist">
