--- a/src/theme/bootstrap/form.html
+++ b/src/theme/bootstrap/form.html
@@ -2,7 +2,7 @@
 <div class="blank10 clear"></div>
 <div class="main ">
  <div class=" bg">
-  <div class="crumbs"><a href="{$site_url}">Home</a>&nbsp;>>&nbsp;{$form_name}</div>
+  <div class="breadcrumb"><a href="{$site_url}">Home</a>&nbsp;>>&nbsp;{$form_name}</div>
   <div class="item-list">
    <form action="" method="post">
     <table width="100%" class="table_form ">
