--- a/src/theme/bootstrap/post.html
+++ b/src/theme/bootstrap/post.html
@@ -11,7 +11,7 @@
 
 <div class="main">
     <div class="post bg">
-        {template crumbs.html}
+        {template breadcrumb.html}
         <form action="" method="post">
 {if $select}
             <input name="select" type="hidden" value="1" />
