--- a/src/theme/bootstrap/redirect.html
+++ b/src/theme/bootstrap/redirect.html
@@ -1,11 +1,12 @@
 {template header.html}
 
-
-    <div class="page-header">
-        <h1>{$site_name} <small>{$catname}</small></h1>
+<div class="container">
+    <div class="panel panel-default">
+        <div class="panel-heading">跳转到外部链接</div>
+        <div class="panel-body">
+            确定要跳转到页面：吗？
+        </div>
     </div>
-    <div class="container-fluid">
-        确定要跳转到页面：吗？
-    </div>
+</div>
 
 {template footer.html}
