--- a/src/theme/bootstrap/search.html
+++ b/src/theme/bootstrap/search.html
@@ -6,7 +6,7 @@
             {template sidebar.html}
         </div>
         <div class="w740 fr bg">
-            <div class="crumbs"><a href="{$site_url}">Home</a>&nbsp;&gt;&nbsp;Search Results of: "{$kw}"</div>
+            <div class="breadcrumb"><a href="{$site_url}">Home</a>&nbsp;&gt;&nbsp;Search Results of: "{$kw}"</div>
             <div class="blank10 clear"></div>
             {if empty($searchnum)}
             <div class="search-result-content">
