--- a/src/theme/bootstrap/sitemap.html
+++ b/src/theme/bootstrap/sitemap.html
@@ -2,7 +2,7 @@
 
 <div class="main sitemap">
     <div class="container">
-        {template crumbs.html}
+        {template breadcrumb.html}
         <ul>
             {nav  }
                 <li><a href="{$vdata['url']}">{$vdata['catname']}</a></li>
