--- a/src/theme/bootstrap/category_article.html
+++ b/src/theme/bootstrap/category_article.html
@@ -1,28 +1,29 @@
+
 {template header.html}
 
-<div class="main">
-    <div class="container">
-        <div class="w210 fl">
-            {template sidebar.html}
-        </div>
-        <div class="w740 fr bg">
-            {template crumbs.html} {nav parentid=$catid typeid=1}
-            <div class="category-list">
-                <div class="category-title">
-                    <span class="title">{$vdata['catname']}</span>
-                    <span class="more"><a href="{$vdata['url']}">更多&gt;&gt;</a></span>
+{template breadcrumb.html}
+
+<div class="container">
+    <div class="row">
+        <div class="col-md-9 col-sm-8 mainbody">
+            {nav parentid=$catid typeid=1}
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    <a href="{$vdata['url']}">{$vdata['catname']}</a>
                 </div>
-                <ul class="article-list">
-                    {list catid=$vdata[catid] num=9 order=time}
-                    <li>
-                        <span class="date">{function.date("Y-m-d", $vdata['time'])}</span>
-                        <a href="{$vdata['url']}">·  {$vdata['title']}</a>
-                    </li>
+                <ul class="list-group">
+                    {list catid=$vdata[catid] num=10 order=time}
+                    <li class="list-group-item"><span class="date">{function.date("Y-m-d", $vdata['time'])}</span> <a href="{$vdata['url']}">{$vdata['title']}</a></li>
                     {/list}
                 </ul>
             </div>
+            <div class="text-center">{$pagination}</div>
             {/nav}
+        </div>
+        <div class="col-md-3 col-sm-4">
+            {template sidebar.html}
         </div>
     </div>
 </div>
+
 {template footer.html}
