--- a/src/theme/bootstrap/list_article.html
+++ b/src/theme/bootstrap/list_article.html
@@ -1,23 +1,27 @@
 {template header.html}
 
-    <div class="main">
-        <div class="container">
-            <div class="w210 fl">{template sidebar.html}</div>
-            <div class="w740 fr bg">
-                {template crumbs.html}
-                <div class="">
-                    <ul class="article-list">
+{template breadcrumb.html}
+
+<div class="container">
+    <div class="row">
+        <div class="col-md-9 col-sm-8 mainbody">
+            <div class="panel panel-default">
+                <div class="panel-heading">{$catname}</div>
+                <ul class="list-group">
                     {list catid=$catid page=$page cache=36000}
-                    <li>
+                    <li class="list-group-item">
                         <span class="date">{function.date("Y-m-d", $vdata['time'])}</span>
-                        <a href="{$vdata['url']}">· {$vdata['title']}</a>
+                        <a href="{$vdata['url']}">{$vdata['title']}</a>
                     </li>
                     {/list}
-                    </ul>
-                    {$pagination}
-                </div>
+                </ul>
             </div>
+            <div class="text-center">{$pagination}</div>
+        </div>
+        <div class="col-md-3 col-sm-4">
+            {template sidebar.html}
         </div>
     </div>
+</div>
 
 {template footer.html}
