--- a/src/theme/bootstrap/list_product.html
+++ b/src/theme/bootstrap/list_product.html
@@ -5,7 +5,7 @@
  </div>
   <div class="w740 fr">
   <div class="page bg">
-    {template crumbs.html}
+    {template breadcrumb.html}
 <!--列表开始-->
    <div class="newslist">
     <ul class="noborder">
