--- a/src/theme/bootstrap/member/index.html
+++ b/src/theme/bootstrap/member/index.html
@@ -1,4 +1,4 @@
-{template member/header.html}
+{template header.html}
 
 {if !$member['status']}
     <div class="alert alert-warning" role="alert"><h3>您的账号暂时未通过审核！</h3></div>
