--- a/src/theme/bootstrap/page.html
+++ b/src/theme/bootstrap/page.html
@@ -1,10 +1,11 @@
 {template header.html}
 
+{template breadcrumb.html}
 
-    <div class="page-header">
-        <h1>{$site_name} <small>{$catname}</small></h1>
+<div class="container">
+    <div class="page-header text-center">
+        <h2>{$catname}</small></h1>
     </div>
-    <div class="container-fluid">
         {$content}
     </div>
 
