--- a/src/theme/bootstrap/show_product.html
+++ b/src/theme/bootstrap/show_product.html
@@ -6,7 +6,7 @@
     </div>
     <div class="w740 fl">
       <div class="page bg">
-        {template crumbs.html}
+        {template breadcrumb.html}
         <h2 class="article-title">{$title}</h2>
         <div class="article-meta">时间：{function.date("Y-m-d H:i:s", $time)} 点击：<script type="text/javascript" src="{function.url('api/index/hits',array('id'=>$id))}"></script>次</div>
         <div class="article-content">{$content}</div>
