--- a/src/theme/bootstrap/sidebar.html
+++ b/src/theme/bootstrap/sidebar.html
@@ -1,10 +1,8 @@
-<div class="sidebar bg">
-  <div class="sidebar-header">Category</div>
-    <div class="sidebar-body">
-      <ul>
-{nav  }
-        <li{if $current} class="select"{/if}><s></s><a href="{$vdata['url']}">{$vdata['catname']}</a></li>
-{/nav}
-    </ul>
-  </div>
+<div class="panel panel-default">
+    <div class="panel-heading">栏目</div>
+    <div class="list-group">
+        {nav  }
+        <a href="{$vdata['url']}" class="list-group-item{if $current} active{/if}">{$vdata['catname']}</a>
+        {/nav}
+    </div>
 </div>
