--- a/src/theme/bootstrap/header.html
+++ b/src/theme/bootstrap/header.html
@@ -48,17 +48,16 @@
     </div>
 </div>
 
-<nav class="navbar navbar-default">
-    <div class="container">
+<div class="container">
+    <nav class="navbar navbar-default">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar">
                 <span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="{$site_url}">{$site_name}</a>
+            <a class="navbar-brand" href="{$site_url}">首页</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
-                <li class="hidden-sm"><a href="{$site_url}">首页</a></li>
                 {nav num=6}<li{if $current} class="active"{/if}><a href="{$vdata['url']}">{$vdata['catname']}</a></li>{/nav}
             </ul>
             <ul class="nav navbar-nav navbar-right">
@@ -80,6 +79,5 @@
                 <li><a href="https://github.com/doufox/doufox/" target="_blank">源码</a></li>
             </ul>
         </div>
-    </div>
-</nav>
-
+    </nav>
+</div>
