--- a/src/theme/mobile/post.html
+++ b/src/theme/mobile/post.html
@@ -30,7 +30,7 @@
 {if $model['content']['title']['show']}
     <tr>
      <th><font color="red">*</font>&nbsp;{$model['content']['title']['name']}：</th>
-     <td><input type="text" class="input-text" size="50" id="title" value="{$data['title']}" name="data[title]" onBlur="admin_command.get_kw()">
+     <td><input type="text" class="input-text" size="50" id="title" value="{$data['title']}" name="data[title]">
      <div class="show-tips" id="title_text"></div></td>
     </tr>
 {/if}
