--- a/src/theme/bootstrap/header.html
+++ b/src/theme/bootstrap/header.html
@@ -19,6 +19,15 @@
     <script async src="static/js/jquery.min.js"></script>
     <script async src="static/bootstrap/js/bootstrap.min.js"></script>
     {function.doHookAction('view_head')}
+    <script>
+        var _hmt = _hmt || [];
+        (function() {
+            var hm = document.createElement("script");
+            hm.src = "https://hm.baidu.com/hm.js?a2c1b56bc33845872bf7f59c7f3f6cce";
+            var s = document.getElementsByTagName("script")[0]; 
+            s.parentNode.insertBefore(hm, s);
+        })();
+    </script>
 </head>
 
 <body>
