--- a/src/theme/bootstrap/footer.html
+++ b/src/theme/bootstrap/footer.html
@@ -1,4 +1,3 @@
-
 <div class="footer-sticky"></div>
 <footer class="footer">
     <div class="container">
@@ -11,7 +10,7 @@
             </div>
             <div class="col-md-6 col-sm-6">
                 <p class="pull-right">
-                    <span><a href="http://www.beian.miit.gov.cn" target="_blank">豫ICP备14006598号</a></span>
+                    <span><a href="http://www.beian.miit.gov.cn" target="_blank">沪ICP备20016252号</a></span>
                     <span>Powered by <a href="https://crogram.com/">Crogram</a></span>
                 </p>
             </div>
