--- a/src/theme/mobile/show_article.html
+++ b/src/theme/mobile/show_article.html
@@ -10,8 +10,7 @@
 
 <div class="article clearfix">
   <h1 class="article-title">{$title}</h1>
-  <div class="article-meta">{function.date("Y-m-d H:i:s", $time)}(浏览：
-    <script type="text/javascript" src="{function.url('api/index/hits',array('id'=>$id))}"></script>)</div>
+  <div class="article-meta">{function.date("Y-m-d H:i:s", $time)}(点击量：{$hits}次)</div>
   <div class="article-content">
     {$content}
   </div>
