--- a/src/theme/mobile/show_news.html
+++ b/src/theme/mobile/show_news.html
@@ -4,7 +4,7 @@
 <!--con-->
 <div class="main clearfix">
  <h1 class="maintit">{$title}</h1>
- <strong>{function.date("Y-m-d H:i:s", $time)}(浏览：<script type="text/javascript" src="{function.url('api/index/hits',array('id'=>$id))}"></script>)</strong>
+ <strong>{function.date("Y-m-d H:i:s", $time)}(点击量：{$hits}次)</strong>
  <div class="contxt">
  {$content}
  </div>
