--- a/src/theme/mobile/show_product.html
+++ b/src/theme/mobile/show_product.html
@@ -1,49 +1,47 @@
 {template head.html}
 {template header.html}
 <div class="warp">
- <div class="w210 fl">
-{template left.html}
- </div>
- <div class="w740 fr">
-  <div class="page bg">
-   <div class="newstitle">
-    您当前位置：<a href="{$site_url}">首页</a> >> {function.breadcrumb($catid, ' &gt;&gt;&nbsp;&nbsp;')}
+   <div class="w210 fl">
+      {template left.html}
+   </div>
+   <div class="w740 fr">
+      <div class="page bg">
+         <div class="newstitle">
+            您当前位置：<a href="{$site_url}">首页</a> >> {function.breadcrumb($catid, ' &gt;&gt;&nbsp;&nbsp;')}
+         </div>
+         <div class="blank10 clear"></div>
+         <h2>{$title}</h2>
+         <div class="info">
+            时间：{function.date("Y-m-d H:i:s", $time)} 点击量：{$hits}次
+         </div>
+         <div class="content">
+            {$content}
+         </div>
+         <div class="blank10 clear"></div>
+         <!--文章内容分页 begin-->
+         {if $content_page}
+         <div class="pagination">
+            {loop $content_page $t=>$u}
+            <a{if $page!=$t} href="{$u}" {else} style="background-color: #c00;" {/if}>{$t} </a> {/loop} </div> <div
+               class="clear blank10">
+         </div>
+         {/if}
+         <!--文章内容分页 end-->
+         <div class="blank20 clear"></div>
+         {if $prev_page}
+         <p>
+            上一篇：<a href="{$prev_page['url']}">{$prev_page['title']}</a>
+         </p>
+         {/if}
+         <div class="blank5 clear"></div>
+         {if $next_page}
+         <p>
+            下一篇：<a href="{$next_page['url']}">{$next_page['title']}</a>
+         </p>
+         {/if}
+      </div>
+      <div class="blank20 clear"></div>
    </div>
    <div class="blank10 clear"></div>
-   <h2>{$title}</h2>
-   <div class="info">
-    时间：{function.date("Y-m-d H:i:s", $time)} 点击：<script type="text/javascript" src="{function.url('api/index/hits',array('id'=>$id))}"></script>
-    次
-   </div>
-   <div class="content">
-{$content}
-   </div>
-   <div class="blank10 clear"></div>
-<!--文章内容分页 begin-->
-{if $content_page}
-   <div class="pagination">
-{loop $content_page $t=>$u}
-    <a{if $page!=$t} href="{$u}"{else} style="background-color: #c00;"{/if}>{$t}</a>
-{/loop}
-   </div>
-   <div class="clear blank10"></div>
-{/if}
-<!--文章内容分页 end-->
-   <div class="blank20 clear"></div>
-{if $prev_page}
-   <p>
-    上一篇：<a href="{$prev_page['url']}">{$prev_page['title']}</a>
-   </p>
-{/if}
-    <div class="blank5 clear"></div>
-{if $next_page}
-   <p>
-    下一篇：<a href="{$next_page['url']}">{$next_page['title']}</a>
-   </p>
-{/if}
-  </div>
-  <div class="blank20 clear"></div>
- </div>
- <div class="blank10 clear"></div>
 </div>
 {template footer.html}
